[gd_scene load_steps=10 format=3 uid="uid://dcegu1i2smc4w"]

[ext_resource type="Script" path="res://tscn_files/whip_man.gd" id="1_knr2h"]
[ext_resource type="Texture2D" uid="uid://l1b3bjh7pxep" path="res://spritesheets/whip_man.png" id="1_x7lha"]
[ext_resource type="PackedScene" uid="uid://cu1gdx71g0oru" path="res://tscn_files/whip.tscn" id="2_2xixk"]
[ext_resource type="PackedScene" uid="uid://cb3hyknybd271" path="res://tscn_files/effects.tscn" id="4_vxoeg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q63vl"]
size = Vector2(185, 266)

[sub_resource type="Animation" id="Animation_dhj3l"]
resource_name = "whip"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../whip:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_va8bo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../whip:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_0dn0p"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../whip:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_41s83"]
_data = {
"RESET": SubResource("Animation_va8bo"),
"death": SubResource("Animation_0dn0p"),
"whip": SubResource("Animation_dhj3l")
}

[node name="whip_man" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_knr2h")
health = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4.5, 6)
shape = SubResource("RectangleShape2D_q63vl")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-10, 2)
texture = ExtResource("1_x7lha")
hframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_41s83")
}

[node name="whip" parent="." instance=ExtResource("2_2xixk")]
visible = false
position = Vector2(-379, -5)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="effects" parent="." instance=ExtResource("4_vxoeg")]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
